# clip.cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  clip.cpp  clip.h  format.sh  stb_image.h  stb_image_resize.h
examples/: CMakeLists.txt  README.md  common-clip.cpp  common-clip.h  embedding.cpp  extract.cpp  main.c  main.cpp  simple.c  zsl.cpp
examples/clip.android/: README.md  settings.gradle.kts
examples/clip.android/app/: build.gradle.kts
examples/clip.android/app/src/main/: AndroidManifest.xml
examples/clip.android/app/src/main/java/android/example/clip/: MainActivity.kt  MainActivityViewModel.kt
examples/clip.android/app/src/main/java/android/example/clip/ui/components/: AppProgressDialog.kt
examples/clip.android/app/src/main/java/android/example/clip/ui/theme/: Color.kt  Theme.kt  Type.kt
examples/clip.android/app/src/main/res/values/: strings.xml  themes.xml
examples/clip.android/clip/: build.gradle.kts
examples/clip.android/clip/src/androidTest/java/android/example/clip/: CLIPAndroidInstrumentedTest.kt
examples/clip.android/clip/src/main/cpp/: CMakeLists.txt  clip_android.cpp
examples/clip.android/clip/src/main/java/android/clip/cpp/: CLIPAndroid.java
examples/clip.android/gradle/: libs.versions.toml
examples/clip.android/gradle/wrapper/: gradle-wrapper.properties
examples/image-search/: CMakeLists.txt  README.md  build.cpp  search.cpp
examples/python_bindings/: README.md  clip.py  example_main.py  pyproject.toml
examples/python_bindings/clip_cpp/: clip.py  exceptions.py  file_download.py
examples/python_bindings/notebooks/: clipcpp_demo.ipynb
models/: CMakeLists.txt  common-ggml.cpp  common-ggml.h  convert_hf_to_ggml.py  convert_hf_to_gguf.py  quantize.cpp  requirements.txt
notebooks/: clipcpp_demo.ipynb
scripts/: build-python-linux.sh  build-python.sh  convert-models.sh  format.sh  hf-readme.md  quantize-models.sh
tests/: CMakeLists.txt  README.md  apple-ref.txt  benchmark.cpp  cls-ref.txt  compare.py  imagenet1k.py  pred.txt  prepare_imagenet1k.py  white-ref.txt
